SERVER-55285 Review why some tests don't pass when we enable by default the new metadata format

Fixing some tests