src/mongo/db/s/balancer/migration_test_fixture.h
@@ -72,13 +72,16 @@ protected:
      * Inserts a document into the config.collections collection to indicate that "collName" is
      * sharded with version "version". The shard key pattern defaults to "_id".
      */
-    void setUpCollection(const NamespaceString& collName, ChunkVersion version);
+    void setUpCollection(const NamespaceString& collName,
+                         const UUID& collUUID,
+                         ChunkVersion version);
 
     /**
      * Inserts a document into the config.chunks collection so that the chunk defined by the
      * parameters exists. Returns a ChunkType defined by the parameters.
      */
     ChunkType setUpChunk(const NamespaceString& collName,
+                         const UUID& collUUID,
                          const BSONObj& chunkMin,
                          const BSONObj& chunkMax,
                          const ShardId& shardId,
